--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             padding: 0;
             box-sizing: border-box;
         }
+
         /* 设置变量 */
         :root {
             --button-height: 32px;
@@ -33,15 +34,28 @@
         }
     </style>
     <style>
+        .icon {
+            width: 1em;
+            height: 1em;
+        }
     </style>
 </head>
 
 
 <body>
     <div id="app">
-        <g-button></g-button>
+        <g-button>
+            按钮
+        </g-button>
+        <g-button icon=settings >
+            按钮
+        </g-button>
+        <g-button icon=settings icon-position="right">
+            按钮
+        </g-button>
     </div>
     <script src="./src/app.js"></script>
+    <script src="//at.alicdn.com/t/font_1888877_dnk47lopvsw.js"></script>
 </body>
 
 </html>
