--- a/index.html
+++ b/index.html
@@ -34,10 +34,7 @@
         }
     </style>
     <style>
-        .icon {
-            width: 1em;
-            height: 1em;
-        }
+
     </style>
 </head>
 
@@ -53,6 +50,7 @@
         <g-button icon=settings icon-position="right">
             按钮
         </g-button>
+        <g-icon name="up"></g-icon>
     </div>
     <script src="./src/app.js"></script>
     <script src="//at.alicdn.com/t/font_1888877_dnk47lopvsw.js"></script>
