--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
 
 <body>
     <div id="app">
-        <g-button>
+        <g-button :loading = false>
             按钮
         </g-button>
-        <g-button icon=settings >
+        <g-button icon=settings :loading = true>
             按钮
         </g-button>
-        <g-button icon=settings icon-position="right">
+        <g-button icon=settings icon-position="right" :loading=false>
             按钮
         </g-button>
         <g-icon name="up"></g-icon>
     </div>
     <script src="./src/app.js"></script>
-    <script src="//at.alicdn.com/t/font_1888877_nr9alxnndvb.js"></script>
+    <script src="//at.alicdn.com/t/font_1888877_6jdywx897x5.js"></script>
 </body>
 
 </html>
