--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 
 <body>
     <div id="app">
-        <g-button :loading = false>
+        <g-button :loading = "loading1" @click = "loading1 = !loading1">
             按钮
         </g-button>
-        <g-button icon=settings :loading = true>
+        <g-button icon=settings :loading = "loading2" @click = "loading2 = !loading2">
             按钮
         </g-button>
-        <g-button icon=settings icon-position="right" :loading=false>
+        <g-button icon=settings :loading = "loading3" @click = "loading3 = !loading3" icon-position = "right">
             按钮
         </g-button>
         <g-icon name="up"></g-icon>
